--- a/angular/app-i18n/src/styles.css
+++ b/angular/app-i18n/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap');
+*{font-family: 'Space Grotesk', sans-serif;}
+body {
+    max-width: 694px;
+    margin: 0 auto;
+    padding: 2rem;
+    background-color: #fafafa;
+}
+
+button {
+    background-color: white;
+    border-radius: 6px;
+    padding: 8px 12px;
+    border: 1px solid #e4e4e4;
+    margin-right: 16px;
+}
+
+button:hover {
+    filter: brightness(95%);
+}
+
+.lang-switcher {
+    margin-top: 40px;
+}
