--- a/angular/app-i18n/src/app/paragraph/paragraph.component.html
+++ b/angular/app-i18n/src/app/paragraph/paragraph.component.html
@@ -1,2 +1,5 @@
-<!-- <p>{{ content.title| translate }}</p> -->
-<!-- <p>{{title | translate }}</p> -->
+<!-- This comes from the .json file -->
+<p>{{ 'error' | translate }}</p>
+
+<!-- This is an enum -->
+<!-- <p>{{ translations.title | translate }}</p> -->
