--- a/src/app/paragraph/paragraph.component.html
+++ b/src/app/paragraph/paragraph.component.html
@@ -2,4 +2,4 @@
 <p>{{ 'error' | translate }}</p>
 
 <!-- This is an enum -->
-<!-- <p>{{ translations.title | translate }}</p> -->
+<p>{{ translations.title | translate }}</p>
