--- a/src/app/paragraph/paragraph.component.html
+++ b/src/app/paragraph/paragraph.component.html
@@ -1,5 +1,6 @@
 <!-- This comes from the .json file -->
-<p>{{ 'error' | translate }}</p>
-
-<!-- This is an enum -->
-<p>{{ translations.title | translate }}</p>
+<section>
+    <h3>Custom component</h3>
+    <p>{{ 'error' | translate }}</p>
+    <p>{{ translations.title | translate }}</p>
+</section>
