Added jsonbin api

--- a/src/app/lang-switcher/lang-switcher.component.html
+++ b/src/app/lang-switcher/lang-switcher.component.html
@@ -2,4 +2,5 @@
 <div class="lang-switcher">
     <button (click)="setLang('nl')">Nederlands</button>
     <button (click)="setLang('en')">English</button>
+    <button (click)="toggleApi()">{{ useRestApi ? 'Use Local' : 'Use API' }}</button>
 </div>
